--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>C:\Users\SIJRAJAN\eclipse-workspace\SeleniumFramwork\testng.xml</span>
+                    <span>C:\Users\SIJRAJAN\eclipse-workspace\SeleniumPracticeTest\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -216,7 +216,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SIJRAJAN\eclipse-workspace\SeleniumFramwork\testng.xml</span>
+            <span class="header-content">C:\Users\SIJRAJAN\eclipse-workspace\SeleniumPracticeTest\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -227,7 +227,7 @@
     &lt;listener class-name=&quot;utils.SuiteListener&quot;/&gt;
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;ChromeTest&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;edge&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;qa.tests.LoginSampleTests&quot;/&gt;
     &lt;/classes&gt;
@@ -273,16 +273,16 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'enterLoginCredentials')
 data.setCell(0, 2, 'qa.tests.LoginSampleTests')
-data.setCell(0, 3, 49345);
+data.setCell(0, 3, 4768);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'enterLoginCredentials')
 data.setCell(1, 2, 'qa.tests.LoginSampleTests')
-data.setCell(1, 3, 13109);
+data.setCell(1, 3, 4349);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -314,36 +314,36 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
-                <span class="method-name">setUpDriver(edge, public void qa.tests.LoginSampleTests.enterLoginCredentials())</span>
-                <span class="method-start">375 ms</span>
+                <span class="method-name">setUpDriver(chrome, public void qa.tests.LoginSampleTests.enterLoginCredentials())</span>
+                <span class="method-start">195 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">enterLoginCredentials</span>
-                <span class="method-start">30831 ms</span>
+                <span class="method-start">11342 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod([TestResult name=enterLoginCredentials status=FAILURE method=LoginSampleTests.enterLoginCredentials(...)</span>
-                <span class="method-start">44271 ms</span>
+                <span class="method-start">16365 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">setUpDriver(edge, public void qa.tests.LoginSampleTests.enterLoginCredentials())</span>
-                <span class="method-start">45450 ms</span>
+                <span class="method-name">setUpDriver(chrome, public void qa.tests.LoginSampleTests.enterLoginCredentials())</span>
+                <span class="method-start">17144 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">enterLoginCredentials</span>
-                <span class="method-start">275086 ms</span>
+                <span class="method-start">24740 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod([TestResult name=enterLoginCredentials status=FAILURE method=LoginSampleTests.enterLoginCredentials(...)</span>
-                <span class="method-start">324685 ms</span>
+                <span class="method-start">29228 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">326143 ms</span>
+                <span class="method-start">30046 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
